fix annotations on mobile

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -125,8 +125,8 @@ p .graphic__emblem {
  	}
 
 	p {
-		font-size: 18px;
-		line-height: 90px;
+		font-size: 17px;
+		line-height: 83px;
 	}
 
 	p .graphic {
@@ -134,7 +134,11 @@ p .graphic__emblem {
 	}
 
 	p .graphic .annotation {
-		display: none;
+		font-size: 13px;
+		font-weight: 700;
+		top: -58px;
+		opacity: 0.4;
+		left: 0px!important;
 	}
 
 	p .graphic__emblem {
